--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
   <a href="MyThugnessHistory.html">MY Thugness</a> <br>
   <a href="https://www.google.com">go to google</a> <br>
   <a href="google.com">google</a> <br>
-  <a href="C:\BACK-FRONT-WEB-DEV\AtomProjks\HTML-Personal-Site\Tabels.html">Tables</a>
-  <br> <a href="C:\BACK-FRONT-WEB-DEV\AtomProjks\HTML-Personal-Site\form.html">Form</a>
+  <a href="Tabels.html">Tables</a>
+  <br> <a href="form.html">Form</a>
 
 </body>
 
